Add configurable JAVA_OPTS